%% Flight Booking System — схема данных для обоих сервисов (3NF)
%% Сущности: Flight (Flight Service), SeatReservation (Flight Service), Booking (Booking Service)
%% Ограничения: available_seats >= 0; total_seats, price, seat_count, total_price — строго > 0
%% UNIQUE: (flight_number, departure_date); booking_id в SEAT_RESERVATIONS — один к одному с Booking

%% ========== 1. Сводная схема (три основные сущности) ==========
erDiagram
    FLIGHTS {
        UUID id PK "Рейс (Flight Service)"
        VARCHAR flight_number "Номер рейса"
        UUID airline_id FK "Авиакомпания"
        CHAR origin "IATA вылет, напр. VKO"
        CHAR destination "IATA прилёт, напр. LED"
        TIMESTAMPTZ departure_time "Время вылета"
        TIMESTAMPTZ arrival_time "Время прилёта"
        INT total_seats "CHECK total_seats > 0"
        INT available_seats "CHECK >= 0, <= total_seats"
        DECIMAL price "CHECK price > 0"
        VARCHAR status "SCHEDULED|DEPARTED|CANCELLED|COMPLETED"
    }

    SEAT_RESERVATIONS {
        UUID id PK "Резервация (Flight Service)"
        UUID flight_id FK "Рейс"
        UUID booking_id UK "Одно бронирование — одна резервация"
        INT seat_count "CHECK seat_count > 0"
        VARCHAR status "ACTIVE|RELEASED|EXPIRED"
    }

    BOOKINGS {
        UUID id PK "Бронирование (Booking Service)"
        UUID flight_id "Ссылка на рейс (cross-service)"
        VARCHAR passenger_name "Пассажир"
        VARCHAR passenger_email "Email"
        INT seat_count "CHECK seat_count > 0"
        DECIMAL total_price "CHECK total_price > 0"
        VARCHAR status "CONFIRMED|CANCELLED"
    }

    FLIGHTS ||--o{ SEAT_RESERVATIONS : "имеет резервации"
    BOOKINGS ||--|| SEAT_RESERVATIONS : "1:1 по booking_id"

%% ========== 2. Детальная схема по БД (3NF): Flight Service + Booking Service ==========
erDiagram
    AIRLINES {
        UUID id PK "gen_random_uuid()"
        VARCHAR code UK "IATA-код авиакомпании, напр. SU"
        VARCHAR name "Название, напр. Aeroflot"
    }

    FLIGHTS {
        UUID id PK "gen_random_uuid()"
        VARCHAR flight_number "Номер рейса, напр. SU1234"
        UUID airline_id FK "→ AIRLINES.id"
        CHAR origin_code "IATA вылет, напр. VKO, LED"
        CHAR destination_code "IATA прилёт"
        TIMESTAMPTZ departure_time "Дата и время вылета"
        TIMESTAMPTZ arrival_time "Дата и время прилёта"
        DATE departure_date "UNIQUE(flight_number, departure_date)"
        INT total_seats "CHECK total_seats > 0"
        INT available_seats "CHECK >= 0 AND <= total_seats"
        DECIMAL price "CHECK price > 0"
        VARCHAR status "SCHEDULED|DEPARTED|CANCELLED|COMPLETED"
    }

    SEAT_RESERVATIONS {
        UUID id PK "gen_random_uuid()"
        UUID flight_id FK "→ FLIGHTS.id"
        UUID booking_id UK "ID бронирования (Booking Service), 1:1"
        INT seat_count "CHECK seat_count > 0"
        VARCHAR status "ACTIVE|RELEASED|EXPIRED"
        TIMESTAMPTZ created_at "DEFAULT NOW()"
        TIMESTAMPTZ updated_at "DEFAULT NOW()"
    }

    BOOKINGS {
        UUID id PK "gen_random_uuid()"
        UUID flight_id "Ссылка на рейс (cross-service, без FK)"
        VARCHAR passenger_name "Имя пассажира"
        VARCHAR passenger_email "Email пассажира"
        INT seat_count "CHECK seat_count > 0"
        DECIMAL total_price "CHECK total_price > 0"
        VARCHAR status "CONFIRMED|CANCELLED"
        TIMESTAMPTZ created_at "DEFAULT NOW()"
        TIMESTAMPTZ updated_at "DEFAULT NOW()"
    }

    AIRLINES ||--o{ FLIGHTS : "выполняет рейс"
    FLIGHTS ||--o{ SEAT_RESERVATIONS : "имеет резервации"
